add health check to docker