@@ -1,4 +1,5 @@
 FROM openjdk:10
+ENV JAVA_OPTS -Xmx2g
 ADD ./build/libs/esl-rest.jar /app.jar
 HEALTHCHECK --interval=30s --timeout=300s --retries=3 CMD curl -sS http://localhost:8080 || exit 1
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar","-Xmx2g -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintHeapAtGC"]
+ENTRYPOINT exec java -Djava.security.egd=file:/dev/./urandom $JAVA_OPTS -jar /app.jar
